# tantivy-jieba

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: integrate.yml
benches/: bench.rs
examples/: mod.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
src/: lib.rs
tests/: search.rs
