[package]
name = "tantivy-jieba"
version = "0.17.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2021"
description = "A library that bridges between tantivy and jieba-rs"
repository = "https://github.com/jiegec/tantivy-jieba"
readme = "README.md"
keywords = ["tantivy", "jieba"]
license = "MIT"

[dependencies]
jieba-rs = "0.8.0"
lazy_static = "1.4.0"
tantivy-tokenizer-api = "0.6.0"

[dev-dependencies]
tantivy = "0.25.0"
criterion = "0.8.0"

[[bench]]
name = "bench"
harness = false
